almost done first page

--- a/less/global.less
+++ b/less/global.less
@@ -2,16 +2,15 @@
     font-size:62.5%;
     margin:0%;
     padding:0%;
-    max-width:100%;
+    max-width: 100%;
 }
 
-html , body {
+
+html, body {
+    background-image:url("Images/image-planet.png");
     font-family: @bodyFonts;
+    
 }
 h1, h2, h3, h4, h5, h6{
     font-family: @headerFont;
 }
-body{
-    background-image:url("images/background.png");
-    background-color: red;
-} 
