--- a/less/index.less
+++ b/less/index.less
@@ -1,12 +1,12 @@
 //mixins and vars
-@import: "variables";
-@import: "mixins";
+@import "variables.less";
+@import "mixins.less";
 
 //global and reset
-@import:"resets";
-@import:"global";
+@import "resets.less";
+@import "global.less";
 
 //Conten on page
-@import:"nav";
-@import:"main-content-about-page";
-@import:"footer-about-page";
+@import "nav.less";
+@import "main-content-about-page.less";
+@import "footer-about-page.less";
