--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,6 @@
 @bodyFonts: 'Cabin', sans-serif;
 
 //colors 
-@greenColor: #56ad34;
+@greenColor: #2e6a2d;
 @greyColor: #d9d9d9;
-@darkgreyColor: #a3a3a3;
+@darkGreyColor: #a3a3a3;
