--- a/less/global.less
+++ b/less/global.less
@@ -7,7 +7,7 @@
 
 
 html, body {
-    background-image:url("Images/image-planet.png");
+    background-image:url("/Images/image-planet.png");
     font-family: @bodyFonts;
     
 }
