--- a/less/nav.less
+++ b/less/nav.less
@@ -38,8 +38,10 @@
 .saying{
     display: flex;
     justify-content: flex-end;
-    height: 42rem;
-    align-items: center;
+    height: 32rem;
+    align-items: space-around;
+    margin-top: 8rem;
+
     .qoute{
         width:50%;
         font-size: 2rem;
