--- a/CSS/index.css
+++ b/CSS/index.css
@@ -195,3 +195,18 @@ h6 {
 .saying .qoute .center {
   text-align: center;
 }
+.mission {
+  height: 30vh;
+  color: #2e6a2d;
+  background-color: #d9d9d9;
+  border-radius: 20px;
+  margin: 5rem 1rem;
+}
+.mission h1 {
+  font-size: 5rem;
+  text-align: center;
+}
+.mission p {
+  text-align: center;
+  line-height: 2rem;
+}
