--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -1,11 +1,14 @@
-
+.blanket{
+    border: solid black 2px;
     .mission{
-        height: 30vh;
         color:@greenColor;
         background-color: @greyColor;
         border-radius: 20px;
         margin: 5rem 1rem;
-        h1{
+        width: 80%;
+        
+        
+        h1{ 
             font-size: 5rem;
             text-align: center;
         }
@@ -14,3 +17,4 @@
             line-height: 2rem;
         }
     }   
+}
