--- a/less/global.less
+++ b/less/global.less
@@ -6,11 +6,16 @@
 }
 
 
-html, body {
+ body {
     background-image:url("/Images/image-planet.png");
     font-family: @bodyFonts;
     
 }
+.about-page{
+    background-image: none;
+    background-color: linear-gradient(to right, white, #e6e6e6);
+}
+
 h1, h2, h3, h4, h5, h6{
     font-family: @headerFont;
 }
