--- a/less/global.less
+++ b/less/global.less
@@ -3,6 +3,7 @@
     margin:0%;
     padding:0%;
     max-width: 100%;
+    box-sizing: border-box;
 }
 
 
@@ -13,7 +14,7 @@
 }
 .about-page{
     background-image: none;
-    background-color: linear-gradient(to right, white, #e6e6e6);
+    background-color: white;
 }
 
 h1, h2, h3, h4, h5, h6{
