--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -30,6 +30,10 @@
     }
     .box{
         margin:1.5rem;
+        @media @phone{
+            order:9999;
+        }
+        
         h2{
             font-size: 3rem;
             text-align: center;
@@ -37,6 +41,107 @@
             background-color: @greyColor;
             border-radius: 10px;
             
+        }
+
+    }
+    .imagematt{
+        @media @phone{
+        order:1;
+    }
+    }
+    .textmatt{
+        @media @phone{
+            order:2;
+        }
+    }
+    .imagejesus{
+        @media @phone{
+            order:3;
+        }
+    }
+    .textjesus{
+        @media @phone{
+            order:4;
+        }
+    }
+    .imagearash{
+        @media @phone{
+            order:5 ;
+        }
+    }
+    .textarash{
+        @media @phone{
+            order:6 ;
+        }
+    }
+    .imagetim{
+        @media @phone{
+            order:7 ;
+        }
+    }
+    .texttim{
+        @media @phone{
+            order:8 ;
+        }
+    }
+    .imagerachel{
+        @media @phone{
+            order:9;
+        }
+    }
+    .textrachel{
+        @media @phone{
+            order:10 ;
+        }
+    }
+    .imagewes{
+        @media @phone{
+            order:11 ;
+        }
+    }
+    .textwes{
+        @media @phone{
+            order:12 ;
+        }
+    }
+    .imagedylan{
+        @media @phone{
+            order:12 ;
+        }
+    }
+    .textdylan{
+        @media @phone{
+            order:13 ;
+        }
+    }
+    .imagemattc{
+        @media @phone{
+            order:14;
+        }
+    }
+    .textmattc{
+        @media @phone{
+            order:15 ;
+        }
+    }
+    .imagethomas{
+        @media @phone{
+            order:16 ;
+        }
+    }
+    .textthomas{
+        @media @phone{
+            order:17 ;
+        }
+    }
+    .imagejorge{
+        @media @phone{
+            order:18 ;
+        }
+    }
+    .textjorge{
+        @media @phone{
+            order:19 ;
         }
     }
 
@@ -69,7 +174,7 @@
             padding:2rem;
             text-align: center;
             @media @phone{
-                font-size: 1.5rem;
+                font-size: 1.4rem;
             }
             
         }
