--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -40,6 +40,9 @@
             padding: 1rem;
             background-color: @greyColor;
             border-radius: 10px;
+            @media @tablet{
+                font-size: 1.8rem;
+            }
             
         }
 
@@ -150,9 +153,14 @@
         background: linear-gradient(to right, @greyColor, @greenColor);
         border-radius: 10px;   
         padding: 1rem;
+        @media @tablet{
+            width:35%;
+        }
         @media @phone{
             width:100%;
         }
+       
+       
 
 
         .circle{
@@ -164,17 +172,29 @@
     }
     .box2, .box4, .box6, .box8, .box10, .box12, .box14, .box16{
         width:60%;
+        @media @tablet{
+            width:50%;
+        }
         @media @phone{
             width:100%;
         }
+        
+        
 
         .list{
             line-height: 4rem;
             font-size: 2rem;
             padding:2rem;
             text-align: center;
+            @media @tablet{
+                font-size: 1.3rem;
+                line-height: 1.8rem;
+            }
             @media @phone{
                 font-size: 1.4rem;
+                line-height: 2rem;
+            
+                
             }
             
         }
@@ -187,10 +207,18 @@
             width:15rem;   
             border-radius: 10px;
             margin-left: 19rem; 
+            @media @tablet{
+                margin:0rem;
+                margin-left: 4rem;
+                padding: 1rem;
+            }
             @media @phone{
                 width:100%;
                 margin:0rem;
             }
+            
+            
+            
 
             a{
                 text-decoration: none;
@@ -211,5 +239,6 @@
 .copy2{
     @media @phone{
         padding:6rem 0rem 3rem 0rem;
+        margin-top: -14rem;
     }
 }
