finished adding comments to my less files

--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -9,30 +9,33 @@
         @media @phone{
             margin-top: 1.5rem;
             padding-bottom: 0rem;
-        }
-        
+        }//closes out media query for mission class at phone view
         
         h1{ 
             font-size: 5rem;
             padding-bottom: 1.3rem;
             text-align: center;
-        }
+        }//closes out h1 element
+
         p{
             text-align: center;
             line-height: 2rem;
-        }
-    }   
-}
+        }//closes out p element
+    }//closes out mission class 
+}//closes out blanket class 
+
 .container{
     .aboutPageFlexPhoto();
+
     @media @phone{
         margin: .5rem;
-    }
+    }//closes out phone media for container class
+
     .box{
         margin:1.5rem;
         @media @phone{
             order:9999;
-        }
+        }//closes out box class
         
         h2{
             font-size: 3rem;
@@ -42,162 +45,162 @@
             border-radius: 10px;
             @media @tablet{
                 font-size: 1.8rem;
-            }
-            
-        }
+              }//closes out tablet view for h2 element    
+        }//closes out h2 element
+    }//close out the box class
 
-    }
     .imagematt{
         @media @phone{
         order:1;
-    }
-    }
+        }//closes out imagematt class for phone view 
+    }//closes out imagematt class 
+
     .textmatt{
         @media @phone{
             order:2;
-        }
-    }
+        }//closes out text matt class media phone view 
+    }//closes out text matt class
+
     .imagejesus{
         @media @phone{
             order:3;
-        }
-    }
+        }//closes out image jesus class media phone view 
+    }//closes out image jesus class
+
     .textjesus{
         @media @phone{
             order:4;
-        }
-    }
+        }//closes out text jesus class media phone view 
+    }//closes out text jesus class
+
     .imagearash{
         @media @phone{
             order:5 ;
-        }
-    }
+        }//closes out image arash class media phone view
+    }//closes out image arash class 
     .textarash{
         @media @phone{
             order:6 ;
-        }
-    }
+        }//closes out text arash class media phone view
+    }//closes out text arash class 
     .imagetim{
         @media @phone{
             order:7 ;
-        }
-    }
+        }//closes out the tim image media phone view
+    }////closes out tim image class
     .texttim{
         @media @phone{
             order:8 ;
-        }
-    }
+        }//clsoes out the tim text media view at phone
+    }//closes out the tim text class
     .imagerachel{
         @media @phone{
             order:9;
-        }
-    }
+        }//closes out the rachel image phone view class 
+    }//closes out the rachel image class
     .textrachel{
         @media @phone{
             order:10 ;
-        }
-    }
+        }//closes out the rachel text media phone 
+    }//close sout the rachel text clas 
     .imagewes{
         @media @phone{
             order:11 ;
-        }
-    }
+        }//closes out the images wes class phone view 
+    }//closes out the images wes class
     .textwes{
         @media @phone{
             order:12 ;
-        }
-    }
+        }//closes out the text wes phone media 
+    }//closes out the text wes class
     .imagedylan{
         @media @phone{
             order:12 ;
-        }
-    }
+        }//closes out the dylan image phone media 
+    }//close out the dylan image class 
     .textdylan{
         @media @phone{
             order:13 ;
-        }
-    }
+        }//closes out the dylan text media phone
+    }//closes out the dylan text class
     .imagemattc{
         @media @phone{
             order:14;
-        }
-    }
+        }//closes out the matt image phone view
+    }//closes out the matt image class 
     .textmattc{
         @media @phone{
             order:15 ;
-        }
-    }
+        }//closes out the matt text media phone
+    }//closes out the matt text class 
     .imagethomas{
         @media @phone{
             order:16 ;
-        }
-    }
+        }//closes out the image thomas media phone view 
+    }//closes out the image thomas class 
     .textthomas{
         @media @phone{
             order:17 ;
-        }
-    }
+        }//closes out the thomas text class media view 
+    }//closes the thomas text class
     .imagejorge{
         @media @phone{
             order:18 ;
-        }
-    }
+        }//closes the jorge image media phone 
+    }//closes the jorge image class 
     .textjorge{
         @media @phone{
             order:19 ;
-        }
-    }
+        }//closes out the jroge text media phone 
+    }//closes out the jorge text class
 
     .box1, .box3, .box5, .box7, .box9, .box11, .box13, .box15{
         width:30%;            
         background: linear-gradient(to right, @greyColor, @greenColor);
         border-radius: 10px;   
         padding: 1rem;
+
         @media @tablet{
             width:35%;
-        }
+        }//closes out the tablet view for the box1-15 odd
+
         @media @phone{
             width:100%;
-        }
+        }//closes out the media phone view for box1-15 odd
        
-       
-
-
         .circle{
             border-radius: 250px;
+        }//closes out the circle class
+    }//close out the box1-15 selector odd
 
-        }
-
-    
-    }
     .box2, .box4, .box6, .box8, .box10, .box12, .box14, .box16{
         width:60%;
+
         @media @tablet{
             width:50%;
-        }
+        }//closes out the media tablet view for box2-16 even
+
         @media @phone{
             width:100%;
-        }
+        }//closes outt he media phone view for box2-16 even
         
-        
-
         .list{
             line-height: 4rem;
             font-size: 2rem;
             padding:2rem;
             text-align: center;
+
             @media @tablet{
                 font-size: 1.3rem;
                 line-height: 1.8rem;
-            }
+            }//closes out the media tablet for the list class
+
             @media @phone{
                 font-size: 1.4rem;
-                line-height: 2rem;
-            
-                
-            }
-            
-        }
+                line-height: 2rem;    
+            }//closes outt the phone media for the list class  
+        }//closes out the list class
+
         .button{
             text-align: center;
             margin-top: 1rem;
@@ -207,38 +210,39 @@
             width:15rem;   
             border-radius: 10px;
             margin-left: 19rem; 
+
             @media @tablet{
                 margin:0rem;
                 margin-left: 4rem;
                 padding: 1rem;
-            }
+            }//closes out the media view for the tablet view button class
+
             @media @phone{
                 width:100%;
                 margin:0rem;
-            }
+            }//closes out the media phone view for the button
             
-            
-            
-
             a{
                 text-decoration: none;
                 color: white;
-            }
+            }//close out the anchor element
+
             a:hover{
                 color: @darkGreyColor;
-            }
-        }
+            }//closes out the anchor element on hover 
+        }//closes out the button class
+    }//closes out the box2-16 even class 
+}//closes out the container class
 
-    }
-}
 .copy{
     text-align: center;
     padding: 3rem 0rem;
     color:@greenColor;
-}
+}//closes out the copy class
+
 .copy2{
     @media @phone{
         padding:6rem 0rem 3rem 0rem;
         margin-top: -14rem;
-    }
-}
+    }//closes out the copy 2 class media phone view
+}//closes out the copy 2 class  
